# jupylates

./: .gitignore  .gitlab-ci.yml  LICENSE  Makefile  README.md  app-gridstack.ipynb  deployments.md  jupylates_demo.md  jupyter_client.pyi  jupyterlite-environment.yml  jupyterlite-environnment.yml  jupytext.toml  myst.yml  pyproject.toml
.ipynb_checkpoints/: initial_code-checkpoint.ipynb  randomization-checkpoint.h  test_silentcode-checkpoint.ipynb
IPython/: display.pyi
examples/: 01_pandas_select_columns.md  02-interpret_code.md  02-interpret_code_cpp.md  03-write_code.md  04-guess_output_cpp.md  05-substitutions.md  interactive-matplotlib.ipynb  jupylates_helpers.hpp  progressive.md  py_7_echange_result.md  py_accumulateur.md  py_booleen_and_result.md  py_forProduit_code.md  py_initial_code.md  py_modulo_result.md
exercices_src/: .flake8  code_randomizer.py  division_entiere_result.md  exercizer.ipynb  exercizer.py  jupyter_exercizer.md  jupyter_exercizer.py  jupyter_exercizer_helpers.py  nbgrader_config.py  notebook_builder.py  pyproject.toml  randomization.h  randomization.py  test_multiresolution_silentcode.md  test_output.md  test_silentcode.md
exercices_src/.ipynb_checkpoints/: test_silentcode-checkpoint.ipynb  test_silentcode-checkpoint.md  test_silentcode.old-checkpoint.ipynb
exercices_src/IPython/: display.pyi
exercices_src/arithmetic/: cpp_division_entiere.md  cpp_division_entiere_result.md  cpp_exercize1.md  cpp_modulo_result.md  cpp_priorite1_result.md  cpp_priorite2_result.md  cpp_z_parentheses_result.md  division_entiere_result.md  priorite2_result.md  py_division_entiere_result.md  py_exercize1.md  py_modulo_result.md  py_priorite1_result.md  py_priorite2_result.md  py_z_parentheses_result.md  randomization.py
exercices_src/bool/: cpp_booleen_and_result.md  cpp_booleen_or_result.md  jupyter_exercizer_helpers.hpp  py_booleen_and_result.md
exercices_src/elseif/: cpp_elseif_wrong.cpp  (+1 more)
experimentations/: code_randomizer.py  exercizer.ipynb  exercizer.py  jupyter_exercizer.md  jupyter_exercizer.py
jupylates/: __init__.py  app-gridstack.ipynb  code_randomizer.py  jupylates.py  jupylates_demo.md  jupylates_helpers.hpp  jupylates_helpers.py
jupyter-plato/: jupyter_exercizer.md  jupyter_exercizer.py  notebook_builder.py
talks/: 2024-09-25-PyData.md  course.py  jupylates_helpers.hpp
(+127 files in other folders)
