[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "jupylates"
description = 'Jupyter app for spaced repetition'
dynamic = [
    "version"
]
authors = [
  { name = "Chiara Marmo", email = "Chiara.Marmo@universite-paris-saclay.fr"},
  { name = "Nicolas M. Thiéry", email = "Nicolas.Thiery@universite-paris-saclay.fr"},
]
readme = "README.md"

classifiers = [
  "Development Status :: 1 - Planning",
  "Intended Audience :: Education",
  "Topic :: Education :: Computer Aided Instruction (CAI)",
  "Programming Language :: Python :: 3",
]  # classifiers list: https://pypi.python.org/pypi?%3Aaction=list_classifiers

dependencies = [
  "jupyterlab",
  "ipywidgets",
  "jupytext",
  "nbclassic",
  "jupyterlab_myst",
  "mystmd",
  "pandas",
  "joblib",
  "warnings",
  "pytz",
  "math",
  "numpy",
  "datetime", 
  
]

[project.optional-dependencies]
# feature dependency groups

doc = [
  "jupyterlite-core >=0.2.0,<0.3.0",
  "jupyterlite-xeus>=0.1.2,<0.2",
  "xeus-python",
]

[tool.mypy]
files = "*.py"
warn_return_any = "True"
warn_unused_configs = "True"
disallow_untyped_defs = "True"
disallow_untyped_calls = "True"
disallow_incomplete_defs = "True"
check_untyped_defs = "True"
no_implicit_optional = "True"
scripts_are_modules = "True"
